2011-01-24  Paul Fitzpatrick  <paulfitz@alum.mit.edu>

	* example/swig/yarp.i: add a wrapper for 
	IPositionControl::checkMotionDone, and define a "BVector"
	class to wrap the C "bool *" types.  [thanks Varun Kompella]

2011-01-22  Paul Fitzpatrick  <paulfitz@sigmund>

	* conf/YarpWdk.cmake: experiment - set up build files for 
	using Windows Driver Kit to compile YARP library and
	executable.

2011-01-10  Paul Fitzpatrick  <paulfitz@alum.mit.edu>

	* conf/FindACE.cmake: integrate paths to old ACE4YARP, support
	dropped accidentally [thanks Jonas Ruesch]

2011-01-09  Arjan Gijsberts  <arjan@liralab.it>

	* example/swig/yarp.i: removal of temporary test line.

2011-01-07  Paul Fitzpatrick  <paulfitz@alum.mit.edu>

	* src/modules/ffmpeg/FfmpegGrabber.cpp: freshen v4l2 support.

2010-12-28  Paul Fitzpatrick  <paulfitz@alum.mit.edu>

	* src/libYARP_OS/src/BottleImpl.cpp: fix hexadecimal
	parsing bug [thanks Alessandro Scalzo]

	* src/libYARP_OS/harness/BottleTest.cpp: test hexadecimal
	parsing bug [thanks Alessandro Scalzo]

2010-12-17  Paul Fitzpatrick  <paulfitz@alum.mit.edu>

	* conf/YarpVersion.cmake: bump to version 2.3.3

2010-12-07  Marco Randazzo <marco.randazzo@iit.it>

    * src/modules/laserHokuyo.cpp: fixed configuration parameters
	
2010-12-07  Paul Fitzpatrick  <paulfitz@alum.mit.edu>

	* src/modules/kinect/CMakeLists.txt: add Philipp Robbel's
	wrapper around libfreenect for kinect [thanks Philipp Robbel]

2010-12-01  Marco Randazzo <marco.randazzo@iit.it>

    * src/modules/laserHokuyo.cpp: fixed const strings under linux

2010-11-29  Paul Fitzpatrick  <paulfitz@nominal.csail.mit.edu>

	* conf/YarpVersion.cmake: bump version to 2.3.2

2010-11-26  Paul Fitzpatrick  <paulfitz@alum.mit.edu>

	* src/libYARP_dev/src/ServerControlBoard.cpp: when YARP_QUIET
	is set, suppress driver chatter [thanks Gianluca Massera]

2010-11-25  Ugo Pattacini <ugo.pattacini@iit.it>

	* GazeControl.h and CartesianControl.h: added methods to save/restore