@@ -10,6 +10,13 @@ IF (NOT YARP_FOUND)
   SET(YARP_DEFINES "@YARP_ALL_DEFINES@") # only needed if you use ACE directly
   SET(YARP_MODULE_PATH "@YARP_MODULE_PATH@")
 
+  SET(YARP_VERSION_MAJOR "@YARP_VERSION_MAJOR@")
+  SET(YARP_VERSION_MINOR "@YARP_VERSION_MINOR@")
+  SET(YARP_VERSION_PATCH "@YARP_VERSION_PATCH@")
+  SET(YARP_VERSION_MODIFIER "@YARP_VERSION_MODIFIER@")
+  SET(YARP_VERSION_ABI "@YARP_VERSION_ABI@")
+  SET(YARP_VERSION "${YARP_VERSION_MAJOR}.${YARP_VERSION_MINOR}.${YARP_VERSION_PATCH}${YARP_VERSION_MODIFIER}")
+
   # Pull in any dependencies that YARP libraries may have.
   INCLUDE("@YARP_DEPENDENCY_FILE@")
 
